--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.android.support:design:24.0.0'
     compile files('libs/jsoup-1.9.2.jar')
     compile 'com.facebook.fresco:fresco:0.12.0'
+    compile 'com.bigkoo:convenientbanner:2.0.5'
+    compile'com.android.support:percent:24.0.0'
 }
