--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile files('libs/gson-2.2.4.jar')
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'jp.wasabeef:fresco-processors:2.0.0'
+    compile 'com.vistrav:ask:2.4'
 }
