--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "28.0.3"
 
     defaultConfig {
-        applicationId "com.example.ritchie_huang.manyuemusic"
+        applicationId "com.music.manyue"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
